# discern

./: 0ofr3prsrcginmkcaajru0vduhckkjg7.darc  Cargo.toml  manifest
docs/plans/: analyzer-persistence-and-ingest-tests.md  api-async-integration-tests.md  application-runtime-config.md  artwork-sidecar-export.md  bounded-worker-pools.md  candidate-review-screens.md  candidate-scoring-and-persistence.md  canonical-release-materialization.md  compatibility-regression-fixtures.md  config-schema.md  discogs-enrichment.md  duplicate-retry-reprocess.md  evidence-driven-matching-service.md  export-metadata-rendering.md  export-preview-screens.md  export-profile-models.md  filesystem-safety-hardening.md  health-and-operational-diagnostics.md  idempotent-tag-writers.md  ingest-and-job-endpoints.md  issue-and-diagnostics-endpoints.md  issue-lifecycle.md  issue-queue-and-jobs-screens.md  job-pipeline-orchestration.md  job-queue-abstractions.md  managed-path-rendering-and-organization.md  manual-import-and-web-smoke-tests.md  manual-override-precedence.md  matching-review-issues.md  musicbrainz-client.md  observability-metrics-and-logs.md  operational-dashboard-views.md  player-compatibility-verification.md  runtime-skeleton.md  (+14 more)
migrations/: 0001_initial_schema.down.sql  0001_initial_schema.up.sql  0002_indexes.down.sql  0002_indexes.up.sql  0003_analyzer_output.down.sql  0003_analyzer_output.up.sql  0004_manual_release_match_override.down.sql  0004_manual_release_match_override.up.sql
src/: lib.rs  main.rs
tests/: api_async_workflows.rs  scale_regression.rs  web_operator_smoke.rs
(+77 files in other folders)
