[package]
name = "discern"
version = "0.1.0"
edition = "2024"

[dependencies]
id3 = "1.16.3"
metaflac = "0.2.8"
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls"] }
rusqlite = { version = "0.37.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9.34"
tokio = { version = "1.48.0", features = ["macros", "rt", "sync", "time"] }
uuid = { version = "1.18.1", features = ["v4"] }
